<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq1"
            android:textColor="#D33C0D"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faqAns1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq2"
            android:textColor="#D33C0D"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faqAns2"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"/>


        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq3"
            android:textColor="#D33C0D"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faqAns3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"/>


        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq4"
            android:textColor="#D33C0D"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faqAns4"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"/>


        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faq5"
            android:textColor="#D33C0D"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/faqAns5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="10dp"/>
        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/txtForMoreHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="For more help"
            android:textColor="#3D5AFE" />

            <View
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>